--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -293,9 +293,8 @@ P(X&gt;2) &amp;=&amp; 1-P(X\leq 2)\\
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 1:</b>&nbsp;
+::<p>
+<b>EXERCISE 1:</b>&nbsp;(Easy)
 If $G$ is a <b>Geom</b>$(0.2)$ random variable, then compute the
 following probabilities.
 <ol>
@@ -330,9 +329,8 @@ class="ans" id="lab1"><ol>
 <p></p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 2:</b>&nbsp;
+::<p>
+<b>EXERCISE 2:</b>&nbsp;(Easy)
 Find $P(T\mbox{ is even})$ where $T\sim$<b>Geom</b>$(0.4).$ 
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
@@ -362,9 +360,8 @@ probability 1/6 of turning up), then what is the distribution of $X?$
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 3:</b>&nbsp;
+::<p>
+<b>EXERCISE 3:</b>&nbsp;(Easy)
 In the above example compute the probability of getting the first `6' within
 the first 3 rolls. 
 <p><a
@@ -373,9 +370,8 @@ class="ans" id="lab3">$\frac{91}{216}$</div></p>
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 4:</b>&nbsp;
+::<p>
+<b>EXERCISE 4:</b>&nbsp;(Easy)
 Some couples are so keen about having a son that they go on producing
 babies until they get their first son, and then they stop having children. 
  Assume that at each birth a baby of
@@ -432,9 +428,8 @@ Var(X) &amp;=&amp; E(X^2) - (E(X))^2 \\
        &amp;=&amp; \frac{1-\theta}{\theta^2}
 \end{eqnarray*}$$
 <p></p>
-
-<p>
-<b>EXERCISE 5:</b>&nbsp;
+::<p>
+<b>EXERCISE 5:</b>&nbsp;(Easy)
 Find the mean and standard deviation of a <b>Geom</b>$(\theta)$ random
 variable for the following values of $\theta.$
 <ol>
@@ -484,9 +479,8 @@ $$
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 6:</b>&nbsp;
+::<p>
+<b>EXERCISE 6:</b>&nbsp;(Easy)
 Compute $E(D)$ and $Var(D)$ in the son-daughter exercise above.
 <p><a
 href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
@@ -533,9 +527,8 @@ The lifespans of certain types of
 <p></p>
 The Geometric distributions are all memoryless. The next exercise asks you to prove this.
 <p></p>
-
-<p>
-<b>EXERCISE 7:</b>&nbsp;
+::<p>
+<b>EXERCISE 7:</b>&nbsp;(Easy)
 Let $X\sim Geom(p).$  Let $x\in{\mathbb N}$  show that $P(X\geq x+a | X\geq x)$  is free of $x.$
 <p><a
 href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
@@ -614,9 +607,8 @@ $$
 P(X=5) = {5-1\choose 3-1}  \theta^3(1-\theta)^2 = 6\theta^3(1-\theta)^2.
 $$
 <p></p>
-
-<p>
-<b>EXERCISE 8:</b>&nbsp;
+::<p>
+<b>EXERCISE 8:</b>&nbsp;(Easy)
 If $X$ follows <b>NegBin</b>$(3,\frac14)$ distribution, find the following
 probabilities.
 <ol>
@@ -654,9 +646,8 @@ E(X) &amp; = &amp; \frac{r}{\theta}\\
 Var(X) &amp; = &amp; \frac{r(1-\theta)}{\theta^2} 
 \end{eqnarray*}$$
 <p></p>
-
-<p>
-<b>EXERCISE 9:</b>&nbsp; $Y\sim$<b>NegBin</b>$(r,\theta).$ Compute $E(Y)$ and
+::<p>
+<b>EXERCISE 9:</b>&nbsp;(Easy) $Y\sim$<b>NegBin</b>$(r,\theta).$ Compute $E(Y)$ and
 $Var(Y)$ for the following values of $r$ and $\theta.$
 <ol>
 <li>$r=3, \theta=\frac12$
@@ -721,9 +712,8 @@ $X_1+\cdots+X_r\sim $<b>NegBin</b>$(\theta,r)$.
 </blockquote>
 
 </fieldset>
-
-<p>
-<b>EXERCISE 10:</b>&nbsp;
+::<p>
+<b>EXERCISE 10:</b>&nbsp;(Easy)
 Using the above result and the mean and variance of
 <b>Geom</b>$(\theta),$
 derive the formula for mean and variance of <b>NegBin</b>$(r,\theta).$
@@ -785,9 +775,8 @@ $$
 distribution. We also say that $X$ is a <b>Poi</b>$(\lambda)$ random
 variable, and write $X\sim$<b>Poi</b>$(\lambda).$
 <p></p>
-
-<p>
-<b>EXERCISE 11:</b>&nbsp;
+::<p>
+<b>EXERCISE 11:</b>&nbsp;(Easy)
 If $X\sim$<b>Poi</b>$(3),$ then find the following probabilities.
 <ol>
 <li>$P(X=4)$
@@ -816,9 +805,8 @@ class="ans" id="lab11"><ol>
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 12:</b>&nbsp;
+::<p>
+<b>EXERCISE 12:</b>&nbsp;(Easy)
 What is the probability that a <b>Poi</b>$(5)$ random variable is even?
 <p><a
 href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
@@ -861,9 +849,8 @@ $$
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 13:</b>&nbsp;
+::<p>
+<b>EXERCISE 13:</b>&nbsp;(Medium)
 A box has 100 items, each of which either passes a quality control test
 (OK) or fails the test (BAD). If a box has more than 3 BAD items, then the
 box is rejected by the quality control inspector. It is known that each
@@ -935,9 +922,8 @@ Var(X)   &amp;=&amp; E(X^2) - (E(X))^2\\
          &amp;=&amp; \lambda.
 \end{eqnarray*}$$
 <p></p>
-
-<p>
-<b>EXERCISE 14:</b>&nbsp;
+::<p>
+<b>EXERCISE 14:</b>&nbsp;(Easy)
 Find the expected values of the following random variables.
 <ol>
 <li>$X\sim$<b>Poi</b>$(2).$
@@ -962,9 +948,8 @@ class="ans" id="lab14"><ol>
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 15:</b>&nbsp;
+::<p>
+<b>EXERCISE 15:</b>&nbsp;(Easy)
 Find the variance of a <b>Poi</b>$(\lambda)$ random variable for the
 following values of $\lambda.$
 <ol>
@@ -998,9 +983,8 @@ then $X+Y$ is a <b>Poi</b>$(\alpha+\beta)$ random variable.
 </fieldset>
 
 <p></p>
-
-<p>
-<b>EXERCISE 16:</b>&nbsp;
+::<p>
+<b>EXERCISE 16:</b>&nbsp;(Easy)
 If $X_1,X_2,X_3,X_4$ are independent random variables with
  distributions <b>Poi</b>(1),<b>Poi</b>(2),<b>Poi</b>(4) and <b>Poi</b>(5),
  respectively.
@@ -1113,65 +1097,50 @@ This interpretation is clearly an over-simplification of the situation. However,
 name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
-
-<p>
-<b>EXERCISE 17:</b>&nbsp;<font size="-2">[infdist1.png]</font><img width="" src="image/infdist1.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 17:</b>&nbsp;(Medium)<font size="-2">[infdist1.png]</font><img width="" src="image/infdist1.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 18:</b>&nbsp;<font size="-2">[infdist2.png]</font><img width="" src="image/infdist2.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 18:</b>&nbsp;(Medium)<font size="-2">[infdist2.png]</font><img width="" src="image/infdist2.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 19:</b>&nbsp;<font size="-2">[infdist3.png]</font><img width="" src="image/infdist3.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;(Easy)<font size="-2">[infdist3.png]</font><img width="" src="image/infdist3.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 20:</b>&nbsp;<font size="-2">[infdist4.png]</font><img width="" src="image/infdist4.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 20:</b>&nbsp;(Easy)<font size="-2">[infdist4.png]</font><img width="" src="image/infdist4.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 21:</b>&nbsp;<font size="-2">[infdist5.png]</font><img width="" src="image/infdist5.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 21:</b>&nbsp;(Easy)<font size="-2">[infdist5.png]</font><img width="" src="image/infdist5.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 22:</b>&nbsp;<font size="-2">[infdist6.png]</font><img width="" src="image/infdist6.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;(Easy)<font size="-2">[infdist6.png]</font><img width="" src="image/infdist6.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 23:</b>&nbsp;<font size="-2">[infdist7.png]</font><img width="" src="image/infdist7.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 23:</b>&nbsp;(Easy)<font size="-2">[infdist7.png]</font><img width="" src="image/infdist7.png" style="vertical-align:text-top;">Use Poisson distribution.<hr>
 </p>
-
-<p>
-<b>EXERCISE 24:</b>&nbsp;<font size="-2">[infdist8.png]</font><img width="" src="image/infdist8.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;(Medium)<font size="-2">[infdist8.png]</font><img width="" src="image/infdist8.png" style="vertical-align:text-top;">Use Poisson distribution.<hr>
 </p>
-
-<p>
-<b>EXERCISE 25:</b>&nbsp;<font size="-2">[infdist9.png]</font><img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 25:</b>&nbsp;(Medium)<font size="-2">[infdist9.png]</font><img width="" src="image/infdist9.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 26:</b>&nbsp;<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 26:</b>&nbsp;(Medium)<font size="-2">[infdist10.png]</font><img width="" src="image/infdist10.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 27:</b>&nbsp;<font size="-2">[infdist11.png]</font><img width="" src="image/infdist11.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 27:</b>&nbsp;(Easy)<font size="-2">[infdist11.png]</font><img width="" src="image/infdist11.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 28:</b>&nbsp;<font size="-2">[infdist12.png]</font><img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 28:</b>&nbsp;(Hard)<font size="-2">[infdist12.png]</font><img width="" src="image/infdist12.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[infdist13.png]</font><img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 29:</b>&nbsp;(Medium)<font size="-2">[infdist13.png]</font><img width="" src="image/infdist13.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[infdist14.png]</font><img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
+::<p>
+<b>EXERCISE 30:</b>&nbsp;(Medium)<font size="-2">[infdist14.png]</font><img width="" src="image/infdist14.png" style="vertical-align:text-top;"><hr>
 </p>
-
-<p>
-<b>EXERCISE 31:</b>&nbsp;Show that 
+::<p>
+<b>EXERCISE 31:</b>&nbsp;(Medium)Show that 
 $$
 \frac{\lambda^k}{k!} \left(1-\frac \lambda n\right)^{n-k} 
 \geq
@@ -1181,9 +1150,8 @@ $$
 where $\lambda = np.$
 <hr>
 </p>
-
-<p>
-<b>EXERCISE 32:</b>&nbsp;Use the above inequality to show that 
+::<p>
+<b>EXERCISE 32:</b>&nbsp;(Medium)Use the above inequality to show that 
 $$
 \frac{e^{-\lambda}\lambda^k}{k!} e^{k \lambda/n}
 &gt;
@@ -1193,9 +1161,8 @@ $$
 $$
 <hr>
 </p>
-
-<p>
-<b>EXERCISE 33:</b>&nbsp;(Banach's matchbox problem)
+::<p>
+<b>EXERCISE 33:</b>&nbsp;(Hard)(Banach's matchbox problem)
 A certain mathematician has two matchboxes (containing $n$
 matches each), one in his left pocket, the other in the
 right. When he needs to light a cigar (smoking which, BTW, is
@@ -1210,12 +1177,33 @@ box $n$ times without ever using the other box.]
 <hr>
 
 </p>
+::::<p>
+<b>EXERCISE 34:</b>&nbsp;(Medium) <font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 34:</b>&nbsp;(Medium) Should go to next page.<font size="-2">[dtwo13.png]</font><img width="" src="image/dtwo13.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 35:</b>&nbsp;(Easy)<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
+::::<p>
+<b>EXERCISE 36:</b>&nbsp;(Easy)<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
+
+<p></p>
 ::<p>
-<b>EXERCISE 35:</b>&nbsp;<font size="-2">[dtwo14.png]</font><img width="" src="image/dtwo14.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 37:</b>&nbsp;(Easy)Find the distribution of $X$  where <font size="-2">[dtwo17.png]</font><img width="" src="image/dtwo17.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
+class="ans" id="lab17">
+Let $X_i$  be indicator for there being a changeover at position $i$  for $i=2,...,n.$  By definition, there
+ cannot be a changeover at $i=1.$  
+<p></p>
+Then the answer is $\sum_2^n E(X_i). $  Now $X_i = 1$  iff the $(i-1)$-th and
+ $i$-th tosses result in either $HT$  or $TH.$  
+<p></p>
+So $E(X_i) = \cdots.$
+</div></p>
+
+</p>
 ::<p>
-<b>EXERCISE 36:</b>&nbsp;<font size="-2">[dtwo15.png]</font><img width="" src="image/dtwo15.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 38:</b>&nbsp;(Easy)<font size="-2">[dtwo37.png]</font><img width="" src="image/dtwo37.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 39:</b>&nbsp;(Easy)<font size="-2">[dtwo38.png]</font><img width="" src="image/dtwo38.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
