--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -258,7 +258,7 @@ of up's and down's. So the number is $\binom{10}{5}.$
 
 <p></p>
 ::<p>
-<b>EXERCISE 1:</b>&nbsp;Find the probability that the drunkard ends up at any given
+<b>EXERCISE 1:</b>&nbsp;(Easy) Find the probability that the drunkard ends up at any given
 $k\in{\mathbb Z}$ in exactly $n$ steps.</p>
 
 <p></p>
@@ -362,7 +362,7 @@ $
 
 <p></p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;
+<b>EXERCISE 2:</b>&nbsp;(Easy)
 Find the numerical value of the probability you found in the
 above example for $n=5.$ Check it by running the following
 code:
@@ -585,9 +585,8 @@ Here are a few exercises that will demonstrate some application of the reflectio
 name="Exercises about first passages">Exercises about first passages</a></h2>
 <a href="https://youtu.be/llYADewax74">Video for this section</a>
 <p></p>
-
-<p>
-<b>EXERCISE 3:</b>&nbsp;Consider a simple, symmetric random walk starting from 0. What is the chance it visits 2 for
+::<p>
+<b>EXERCISE 3:</b>&nbsp;(Medium)Consider a simple, symmetric random walk starting from 0. What is the chance it visits 2 for
  the first time at time 6? 
 Pictorially,  we need to  count  paths like the second one in the following diagram. 
 <center>
@@ -616,8 +615,9 @@ The answer may now be obtained easily using the reflection principle.
 
 </p>
 The next exercise is an obvious generalisation.
-<p>
-<b>EXERCISE 4:</b>&nbsp;Let $r,n\in{\mathbb N}$ with $r\leq n$.   Consider a simple, symmetric random walk starting from 0. Then
+::<p>
+<b>EXERCISE 4:</b>&nbsp;(Medium) Let $r,n\in{\mathbb N}$ with $r\leq n$.   Consider a simple, symmetric random
+ walk starting from 0. Then show that
  the chance of its visiting
  $r$  for the first time
  at time $n$  is 
@@ -641,9 +641,8 @@ time $n-1$ to $n$ is forced (it has to move up).
 name="Exercises regarding never returning to 0 (fixed end point)">Exercises regarding never returning to 0 (fixed end point)</a></h2>
 <a href="https://youtu.be/ypff2sktQhY">Video for this section</a>
 <p></p>
-
-<p>
-<b>EXERCISE 5:</b>&nbsp;What is conditional probability that a simple, symmetric random walk starting from 0 will end
+::<p>
+<b>EXERCISE 5:</b>&nbsp;(Medium)What is the conditional probability that a simple, symmetric random walk starting from 0 will end
  at (6,2) without ever returning to 0 before that?
 <p><a
 href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
@@ -657,9 +656,8 @@ Now apply the reflection principle.
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 6:</b>&nbsp;What is the conditional probability that a simple, symmetric random walk starting from 0 will end
+::<p>
+<b>EXERCISE 6:</b>&nbsp;(Medium) What is the conditional probability that a simple, symmetric random walk starting from 0 will end
  at $(2n,2r)$ without ever returning to 0 before that? Assume $1\leq r\leq n$.
 <p><a
 href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
@@ -683,9 +681,8 @@ name="Exercises regarding never returning to 0 (arbitrary end point)">Exercises 
 <p></p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 7:</b>&nbsp;
+::<p>
+<b>EXERCISE 7:</b>&nbsp;(Medium)
 Consider all paths of length $2n$ starting
 at $(0,0)$. Show that the number of these paths
 that never return to $0$ is $N_{2n,0}.$
@@ -733,12 +730,13 @@ equals the number of $2n$-length paths ending at 0. Could you prove it directly 
 
 <h3><a
 name="Exercises about the maximum place visited">Exercises about the maximum place visited</a></h3>
-
-<p>
-<b>EXERCISE 8:</b>&nbsp;
+::<p>
+<b>EXERCISE 8:</b>&nbsp;(Medium)
 Consider a simple, symmetric random walk of length 11 starting from 0. Given that it has eneded at
  1, what is the conditional probability that the maximum position it has visited is 4?
-Basically, we need to count paths like the following? 
+<p><a
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
+class="ans" id="lab6">Basically, we need to count paths like the following:
 <center>
 <table width="100%">
 <tr>
@@ -750,9 +748,7 @@ Basically, we need to count paths like the following?
 </table>
 </center>
 
-<p><a
-href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
-class="ans" id="lab6">
+<p></p>
 Find the number of paths from (0,0) to (11,1) that meet 4 (may or may not cross it). This is easy to compute using the reflection
  principle. The answer is $N_{11,7}.$
 <p></p>
@@ -764,9 +760,8 @@ The difference should give you the answer: $N_{11,7}-N_{11,9}.$
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 9:</b>&nbsp;
+::<p>
+<b>EXERCISE 9:</b>&nbsp;(Medium)
 How many paths of length 11 are there from $(0,0)$   that have maximum height
  $4$?
 <p><a
@@ -781,9 +776,8 @@ Find the number of all such paths with each of these final heights, and add. Don
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 10:</b>&nbsp;
+::<p>
+<b>EXERCISE 10:</b>&nbsp;(Medium)
 Consider all paths of length $n$ starting from $(0,0).$
 Let $r\in\{0,...,n\}.$ Then show that
 the number of paths with maximum $r$ is $N_{n,r}$
@@ -840,7 +834,7 @@ parities. Hence the result.
 <h3><a
 name="Exercises about first return to 0">Exercises about first return to 0</a></h3>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;
+<b>EXERCISE 11:</b>&nbsp;(Medium)
 Consider all paths of length $2n$ starting at $(0,0).$
 Prove that the number of these paths that return to $0$ at $2n$
 for the first time is $4N_{2n-2,0}-N_{2n,0}=\frac{N_{2n,0}}{2n-1}.$
@@ -874,7 +868,7 @@ Hence the result.
 
 <p></p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;
+<b>EXERCISE 12:</b>&nbsp;(Medium)
 Consider all paths of length $2n$ starting at $(0,0).$
 What is the number of these paths that return to $0$
 at $2r$ for some given $r &lt; n?$ Also, how many of these
@@ -884,7 +878,7 @@ return to 0 from the positive side?
 <h3><a
 name="Exercises about last return to 0">Exercises about last return to 0</a></h3>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;
+<b>EXERCISE 13:</b>&nbsp;(Hard)
 Consider all paths of length $2n$ starting at $(0,0).$
 Take any $k\in\{1,...,n\}.$ Show that the number of these paths that
 return to 0 for last time at $2k$ is $N_{2k,0}\times N_{2n-2k,0}.$
@@ -915,7 +909,7 @@ in $N_{2n-2k,0}$ ways, by the <b>no 0-return theorem</b>. Hence the result.
 <h3><a
 name="Other problems">Other problems</a></h3>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;
+<b>EXERCISE 14:</b>&nbsp;(Medium)
 (Ballot problem) two candidates are contesting in
 a vote. There are $n$ voters who have cast their votes. The
 votes are being counted with the $n$ ballot papers ordered
@@ -958,7 +952,7 @@ So the required probability is $\frac{p-q}{p+q},$ as required.
 
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 15:</b>&nbsp;(Medium)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most22.png"></th>
@@ -977,7 +971,7 @@ class="ans" id="lab12">This is just the complement of the last problem. So the a
 
 <p></p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;Let $a,b&gt;0.$ Show that the number of paths from $(0,0)$ to $(n,a)$ that are
+<b>EXERCISE 16:</b>&nbsp;(Medium)Let $a,b&gt;0.$ Show that the number of paths from $(0,0)$ to $(n,a)$ that are
 always $&gt;-b$ is $N_{n,a}-N_{n,a+2b}.$ <p><a
 href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
 class="ans" id="lab13">
@@ -991,7 +985,7 @@ class="ans" id="lab13">
 
 <p></p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;Let $b&gt; a&gt; 0.$ Show that the number of paths
+<b>EXERCISE 17:</b>&nbsp;(Medium) Let $b&gt; a&gt; 0.$ Show that the number of paths
 from $(0,0)$ to $(n,a)$ that are
 always $&lt;b$ is $N_{n,a}-N_{n,2b-a}.$
 <p><a
@@ -1005,7 +999,7 @@ class="ans" id="lab14">
 
 <p></p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;Show that if $a&gt; c&gt; 0$  and $b&gt;0$, then  the number of paths from (0,0) to $(n,c)$
+<b>EXERCISE 18:</b>&nbsp;(Hard) Show that if $a&gt; c&gt; 0$  and $b&gt;0$, then  the number of paths from (0,0) to $(n,c)$
   that attain height $a$  and <i>then</i>  attain height $-b$  before finishing at $(n,c),$  is $N_{n,2a+2b+c}.$ 
  The paths may have also attained height $-b$  before attaining height  $a.$
 <p><a
@@ -1024,7 +1018,7 @@ class="ans" id="lab15">
 </div></p> 
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;Let $a&gt;c&gt;0$ and $b&gt;0.$ Show that the number of
+<b>EXERCISE 19:</b>&nbsp;(Hard) Let $a&gt;c&gt;0$ and $b&gt;0.$ Show that the number of
 paths from $(0,0)$ which hit the
 horizontal line at height $a$ and then lead to $(n,c)$
 without having touched the horizontal line at height $-b$ is  
@@ -1054,7 +1048,7 @@ Hence the result.
 
 <p></p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;Prove that there are as many paths from (0,0)
+<b>EXERCISE 20:</b>&nbsp;(Hard)Prove that there are as many paths from (0,0)
 to $(2n+2,0)$ with all interior vertices $&gt;0$ as there
 are paths from (0,0) to $(2n,0)$ where all interior
 vertices are $\geq 0.$<p><a
@@ -1077,7 +1071,7 @@ to $(2n,0)$ with all interior vertices $\geq 0$}.
 
 <p></p>
 ::<p>
-<b>EXERCISE 21:</b>&nbsp;True or false: The probability that before time $2n$ there occur
+<b>EXERCISE 21:</b>&nbsp;(Easy)True or false: The probability that before time $2n$ there occur
 exactly $r$ returns to the origin equals the probability
 that a return occurs at time $2n$  preceded by at
 least $r$ returns.
@@ -1090,7 +1084,7 @@ class="ans" id="lab18">False. Consider $r=1$  and $n=2.$  Then the first probabi
 
 <p></p>
 ::<p>
-<b>EXERCISE 22:</b>&nbsp;Consider random paths of length $2n$ starting
+<b>EXERCISE 22:</b>&nbsp;(Easy)Consider random paths of length $2n$ starting
 from $(0,0).$ Let $k\in\{1,...,n\}.$ Consider the two events:
 <blockquote>
 $A = $ the path passes through $(2n,0)$ and the maximum
@@ -1111,7 +1105,7 @@ For $k\in\{1,...,n\},$  the result follows directly from reflection principle. T
 
 <p></p>
 ::<p>
-<b>EXERCISE 23:</b>&nbsp;Find the fallacy in the following argument:
+<b>EXERCISE 23:</b>&nbsp;(Medium) Find the fallacy in the following argument:
 Consider the set of all paths of length 10 starting
 from $(0,0).$
 <p></p>
@@ -1136,7 +1130,7 @@ class="ans" id="lab20">The "$|B|\leq |A|$ " argument is wrong. What it says is: 
 
 <p></p>
 ::<p>
-<b>EXERCISE 24:</b>&nbsp;<center>
+<b>EXERCISE 24:</b>&nbsp;(Hard)<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most56.png"></th>
@@ -1163,7 +1157,7 @@ So either $w_1 = 0$  or $w_2 = 0$  or $k-w_2 = 0.$  Here $w_1$  cannot be zero, 
 
 </p>
 ::<p>
-<b>EXERCISE 25:</b>&nbsp;Let $u_{2n}$ denote the probability that a random path
+<b>EXERCISE 25:</b>&nbsp;(Hard) Let $u_{2n}$ denote the probability that a random path
 of length $2n$ starting from $(0,0)$ passes
 through $(2n,0).$ Also, let $u_0=1.$ Let $v_{2n}$
 denote the probability that a random path of length $2n$
@@ -1178,9 +1172,6 @@ href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
 class="ans" id="lab22">Condition on the first time the path returns to zero, and then use the theorem of total probability.</div></p>
 
 </p>
-
-<p></p>
-
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
