--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>October 17, 2025:</strong></dt>
+<dd><ul>
+<li>Finished classifying all the exercises as Easy, Medium or Hard.</li>
+</ul>
+</dd>
 <dt><strong>October 15, 2025:</strong></dt>
 <dd><ul>
 <li><p>Classified most of the exercises as Easy, Medium or Hard. The classification is not yet complete.</p></li>
