--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -202,9 +202,8 @@ $p(t) = \frac 13(t+t^2+t^5)$.
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 1:</b>&nbsp;Find the PGF of a random variable with $Binom(n,p)$  distribution.</p>
+::<p>
+<b>EXERCISE 1:</b>&nbsp;(Easy) Find the PGF of a random variable with $Binom(n,p)$  distribution.</p>
 
 <p></p>
 We have defined  PGF as a power series, but we have not mentioned anything about its convergence yet. 
@@ -220,14 +219,12 @@ Any PGF $p(t)$  must converge absolutely for $|t|\leq 1$.
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 2:</b>&nbsp;Think of a case where the radius of convergence is $\infty$.</p>
+::<p>
+<b>EXERCISE 2:</b>&nbsp;(Easy) Think of a case where the radius of convergence is $\infty$.</p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 3:</b>&nbsp;Think of a case where the radius of convergence is $1$.</p>
+::<p>
+<b>EXERCISE 3:</b>&nbsp;(Easy) Think of a case where the radius of convergence is $1$.</p>
 
 <p></p>
 
@@ -248,21 +245,18 @@ If $X$  are $Y$  are two random variables both taking only nonnegative integer v
 </fieldset>
 
 <p></p>
-
-<p>
-<b>EXERCISE 4:</b>&nbsp;Show that for $n\in{\mathbb N}$  we have
+::<p>
+<b>EXERCISE 4:</b>&nbsp;(Easy) Show that for $n\in{\mathbb N}$  we have
 $$E(X(X-1)\cdots (X-n+1)) = p^{(n)}(1)$$.
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 5:</b>&nbsp;Show that $E(t^X) = p(t)$.</p>
+::<p>
+<b>EXERCISE 5:</b>&nbsp;(Easy) Show that $E(t^X) = p(t)$.</p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 6:</b>&nbsp;Show that if $X,Y$  are independent random variables taking nonnegative integer values,
+::<p>
+<b>EXERCISE 6:</b>&nbsp;(Easy) Show that if $X,Y$  are independent random variables taking nonnegative integer values,
  with PGFs $\xi(t)$  and $\psi(t)$, then the PGF of $X+Y$  is
  $\xi(t)\psi(t)$.<p><a
 href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
@@ -347,8 +341,8 @@ Let $\xi(t)$  be the PGF of $X_1$. In other words,
 $$\xi(t) = p_0+p_1t+p_2t^2+\cdots.$$
 <p></p>
 The next exercise is of central importance. 
-<p>
-<b>EXERCISE 7:</b>&nbsp;Show that $X_2 $ has PGF $\xi_2(t)=\xi(\xi(t))$  for $|t| &lt; 1$.
+::<p>
+<b>EXERCISE 7:</b>&nbsp;(Medium) Show that $X_2 $ has PGF $\xi_2(t)=\xi(\xi(t))$  for $|t| &lt; 1$.
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">
@@ -392,9 +386,9 @@ Notice that convergence is not a problem, because we have assumed $|t| &lt; 1$, 
 </p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 8:</b>&nbsp;In general show that for $n\in{\mathbb N}$  the PGF of $X_n$  is $\xi_n(t) = \xi(\xi_{n-1}(t))$.</p>
+::<p>
+<b>EXERCISE 8:</b>&nbsp;(Medium) In general show that for $n\in{\mathbb N}$  the PGF of $X_n$  is $\xi_n(t) =
+ \xi(\xi_{n-1}(t))$.</p>
 
 <p></p>
 Now $P(X_n=0) = \xi_n(0)$. 
@@ -411,9 +405,8 @@ How many fixed points can $\xi(t) $ have? Surely $1$  is a fixed point, since $\
  it is the only one, then
  $\theta$  must be $1$.
 <p></p>
-
-<p>
-<b>EXERCISE 9:</b>&nbsp;Show that in the simple cases discussed earlier $1$  is the only fixed point.</p>
+::<p>
+<b>EXERCISE 9:</b>&nbsp;(Easy) Show that in the simple cases discussed earlier $1$  is the only fixed point.</p>
 
 <p></p>
 Notice that $\xi'(t)$  is always nonnegative. In fact, except in the trivial case of
@@ -443,14 +436,14 @@ You can notice two fixed points (<i>i.e.</i>, points where the black curve cuts 
 <p></p>
 The answer is $\theta$  will always be the <i>smallest</i>  fixed point. This follows from the exercises below.
 <p></p>
-
-<p>
-<b>EXERCISE 10:</b>&nbsp;Let $\mu$  be any fixed point of $\xi(t)$. Then show that $\forall n\in{\mathbb N}~~\xi_n(0)\leq \mu$.</p>
+::<p>
+<b>EXERCISE 10:</b>&nbsp;(Medium) Let $\mu$  be any fixed point of $\xi(t)$. Then show that $\forall
+ n\in{\mathbb N}~~\xi_n(0)\leq \mu$.</p>
 
 <p></p>
-
-<p>
-<b>EXERCISE 11:</b>&nbsp;Use the last exercise to show that $\theta$  must be $\leq$  all fixed points of $\xi(t)$.</p>
+::<p>
+<b>EXERCISE 11:</b>&nbsp;(Easy) Use the last exercise to show that $\theta$  must be $\leq$  all fixed
+ points of $\xi(t)$.</p>
 
 <p></p>
 
@@ -492,7 +485,7 @@ So the final answer is:
 Could you arrive at this impressive answer without using PGF?  
 <p></p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;(Medium) <center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/jt18.png"></th>
