--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -482,14 +482,14 @@ So $Var(X)=E(X^2)-(E(X))^2=\theta-\theta^2=\theta(1-\theta).$
 <b>EXAMPLE 6:</b>&nbsp;
 $X$ is a <b>Bern</b>(0.5) random variable. $Y$ has a <b>Bern</b>(0.2)
 distribution. $X$ and $Y$ are independent. Let $Z=XY.$ Show
-that $Z$ has <b>Bern</b>(0.01) distribution. Hence compute $Var(Z)$. 
+that $Z$ has <b>Bern</b>(0.1) distribution. Hence compute $Var(Z)$. 
 <p></p>
 
 <p></p>
 <b>SOLUTION:</b> Since X and Y can take only the values 0 and 1, hence their product, Z,
 can be only 0 or 1. So, Z must have  a <b>Bern</b>$(\theta)$
 distribution for some $\theta$. We have to show that
-$\theta=0.01.$
+$\theta=0.1.$
 <p></p>
 Now,
 $$\begin{eqnarray*}
@@ -498,13 +498,14 @@ $$\begin{eqnarray*}
        &amp;=&amp; P(X=1 \mbox{ and } Y=1)\\
        &amp;=&amp; P(X=1)P(Y=1) \mbox{ since $X,Y$ independent} \\
        &amp;=&amp; 0.5 \times 0.2\\
-       &amp;=&amp; 0.01
+       &amp;=&amp; 0.1
 \end{eqnarray*}$$  
 <p></p>
 So by property of Bernoulli distribution we have
 $$
 Var(Z)=0.01(1-0.01)=0.0099
 $$
+[Thanks to Tushti for corrected a typo
  ■
 </p>
 
