--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -608,9 +608,11 @@ Notice that any valid path must pass through $(5,1)$, and
 you have no choice about the last segment (it must be upwards).  So we are
  counting all paths from
  $(0,0)$  to $(5,1)$   not
- meeting the horizontal line at 6. 
+ meeting the horizontal line at 2. 
 <p></p>
 The answer may now be obtained easily using the reflection principle.
+<p></p>
+[Thanks to Mayukh for correcting a typo here.]
 </div></p>
 
 </p>
