--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -518,7 +518,7 @@ Is it possible for a random variable $X$  to have a distribution such that $P(X\
  remember its age. Here is exact definition:
 <fieldset>
 <legend><b>Definition: Memoryless</b></legend>
-A random variable $X$  is called <b><font color="red" size="40">memoryless</font></b>  if for all $x$  and all
+A nonnegative random variable $X$  is called <b><font color="red" size="40">memoryless</font></b>  if for all $x\geq 0$  and all
  $a&gt;0$  the conditional probability  $P(X\geq x+a|X\geq x)$  is free of $x$  (need not be free of $a$). 
 </fieldset>
 The lifespans of certain types of
