--- a/prob1_2025/fluc.html
+++ b/prob1_2025/fluc.html
@@ -623,7 +623,8 @@ The next exercise is an obvious generalisation.
  the chance of its visiting
  $r$  for the first time
  at time $n$  is 
-$$\frac{N_{n-1,r-1}-N_{n-1,r+1}}{2^{-n}}.$$
+$$\frac{N_{n-1,r-1}-N_{n-1,r+1}}{2^n}.$$
+[Thanks to Mayukh for correcting a typo here.]
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
 class="ans" id="lab2">
@@ -659,8 +660,9 @@ Now apply the reflection principle.
 
 <p></p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;(Medium) What is the conditional probability that a simple, symmetric random walk starting from 0 will end
- at $(2n,2r)$ without ever returning to 0 before that? Assume $1\leq r\leq n$.
+<b>EXERCISE 6:</b>&nbsp;(Medium) 
+Given that a simple, symmetric random walk starting from 0 has  ended  at $(2n,2r),$ 
+what is the conditional probability that it never returned to 0 before that? Assume $1\leq r\leq n$.
 <p><a
 href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
 class="ans" id="lab4">
@@ -670,7 +672,9 @@ Clearly in the second step the path must be at (1,1). So we need to count the nu
 By the reflection principle, the number of paths from $(1,-1)$  to $(2n,2r)$  hitting 0 in-between is
 $N_{2n-1,2r+1}$. Also the total number of paths is $N_{2n-1,2r-1}$.
 <p></p>
-Hence the answer is $N_{2n-1,2r-1}-N_{2n-1,2r+1}$.
+Hence the answer is $\frac{N_{2n-1,2r-1}-N_{2n-1,2r+1}}{N_{2n,2r}}$.
+<p></p>
+[Thanks to Mayukh for correcting a typo here.]
 </div></p>
 
 </p>
@@ -757,7 +761,7 @@ Find the number of paths from (0,0) to (11,1) that meet 4 (may or may not cross 
 Next find similarly 
 the number of paths from (0,0) to (11,1) that meet 5 (may or may not cross it). The answer is $N_{11,9}.$
 <p></p>
-The difference should give you the answer: $N_{11,7}-N_{11,9}.$
+The answer is $\frac{N_{11,7}-N_{11,9}}{N_{11,1}}.$
  </div></p>
 </p>
 
