--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -153,7 +153,13 @@ rel="stylesheet" href="branch.css"></link></head><body>
 <h3>Probability Generating Function</h3>
 <ul>
 <li>
-<a href="#Probability Generating Function (PGF)">Probability Generating Function (PGF)</a>
+<a href="#What is a PGF?">What is a PGF?</a>
+</li>
+<li>
+<a href="#Analytical properties">Analytical properties</a>
+</li>
+<li>
+<a href="#Probabilistic properties">Probabilistic properties</a>
 </li>
 <li>
 <a href="#An application: Branching process">An application: Branching process</a>
@@ -182,7 +188,9 @@ rel="stylesheet" href="branch.css"></link></head><body>
 
 
 <h1><a
-name="Probability Generating Function (PGF)">Probability Generating Function (PGF)</a></h1>
+name="What is a PGF?">What is a PGF?</a></h1>
+<a href="https://youtu.be/MS8akAOsBlI">Video for this section</a>
+<p></p>
 
 <fieldset>
 <legend><b>Definition: Probability generating function (PGF)</b></legend>Let a random variable $X$  take only nonnegative integer values. Then
@@ -205,6 +213,11 @@ $p(t) = \frac 13(t+t^2+t^5)$.
 ::<p>
 <b>EXERCISE 1:</b>&nbsp;(Easy) Find the PGF of a random variable with $Binom(n,p)$  distribution.</p>
 
+<p></p>
+
+<h1><a
+name="Analytical properties">Analytical properties</a></h1>
+<a href="https://youtu.be/bBF3gt0-JBk">Video for this section</a>
 <p></p>
 We have defined  PGF as a power series, but we have not mentioned anything about its convergence yet. 
 <p></p>
@@ -234,7 +247,14 @@ Any PGF $p(t)$  must converge absolutely for $|t|\leq 1$.
 <p>
 <b><i>Proof:</i></b>Standard theorem from real analysis.<b><i>[QED]</i></b>
 </p>
-Thanks to this theorem, 
+
+<p></p>
+
+<h1><a
+name="Probabilistic properties">Probabilistic properties</a></h1>
+<a href="https://youtu.be/9dtUu6bg6xM">Video for this section</a>
+<p></p>
+Thanks to the above theorem, 
 we can recover the probabilities from the PGF by repeated differentiation at $t=0$:
 $$p_n = \frac{p^{(n)}(0)}{n!}$$.
 Hence we get the following theorem.
